# cpp-collect-loot-game

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
src/: app.cpp  app.h  app_serialization.h  collision_detector.cpp  collision_detector.h  connection_pool.h  extra_data.h  geom.h  http_server.cpp  http_server.h  infrastructure.cpp  infrastructure.h  json_loader.cpp  json_loader.h  logging.cpp  logging.h  main.cpp  model.cpp  model.h  model_serialization.h  postgres.h  request_handler.cpp  request_handler.h
tests/: collision-detector-tests.cpp  model-tests.cpp  state-serialization-tests.cpp
